--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title>UNPLUGGED: A Tech Industry Retreat</title>
+    <title>Unplugged: A Tech Industry Retreat</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -24,11 +24,9 @@
   <body>
     <header>
       <div class="content-wrapper">
-        <figure>
-          <a href="#"
-            ><img src="assets/unpluggedlogo.png" alt="unplugged logo"
-          /></a>
-        </figure>
+        <a href="#"
+          ><img src="assets/unpluggedlogo.png" alt="unplugged logo"
+        /></a>
         <div class="header-divider"></div>
         <nav>
           <ul>
@@ -45,29 +43,95 @@
           <h1>Retreat from the desk, return refreshed.</h1>
         </div>
       </section>
+
       <aside>
         <div class="content-wrapper">
           <div class="form-description">
-            <h2>Want to join the next retreat?</h2>
+            <h3>Want to join the next retreat?</h3>
             <p>
               Find out when we are holding our next retreat and how your company
               or team can sign up!
             </p>
           </div>
           <div class="form">
-            <h2>Find out more</h2>
+            <h3>Find out more</h3>
             <input type="text" name="name" value="name@email.com" />
             <input type="button" value="Download Itinerary" />
           </div>
         </div>
       </aside>
+
+      <section class="features">
+        <div class="content-wrapper">
+          <h2>
+            Have the work week you always dreamed of — without the bad wifi.
+          </h2>
+          <div class="features-items">
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">
+                Located in a peaceful bungalow outside of Lake Geneva,
+                Wisconsin.
+              </p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">
+                12 private rooms with ensuite bathrooms, 2 group meeting rooms,
+                and 4 breakout rooms.
+              </p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">
+                Private chef team providing on demand meals - just like your
+                team kitchen.
+              </p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">
+                5 outdoor obstacle courses, including a private beach <span>&#189</span> mile
+                from bungalow.
+              </p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">
+                Retreat facilitator to manage your day-to-day activities so you
+                all get a chance to reset.
+              </p>
+            </article>
+            <article>
+              <p class="fontawesome-icon"></p>
+              <p class="features-item-description">
+                Dedicated computer room for times you must use wifi.
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="reviews">
+        <div class="content-wrapper">
+          <h2>Be a better team in 5 days, like this one.</h2>
+          <article>
+            <div><h3>LaCrue Bottling Co. October 2018</h3>
+            <p>
+            "Unplugged was an amazing experience, allowing our team the time
+            needed to reset, refocus, and become stronger than ever!"
+            </p>
+            </div>
+          </article>
+        </div>
+      </section>
     </main>
 
     <footer>
       <div class="content-wrapper">
         <div class="footer-content">
           <div class="contact">
-            <h3>Contact</h3>
+            <h4>Contact</h4>
             <address>
               <p>
                 555-555-5555 <br />
@@ -76,12 +140,12 @@
             </address>
           </div>
           <div class="social">
-            <h3>Social</h3>
+            <h4>Social</h4>
             <div class="social-icons">
               <p>
-                <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+                <a href="https://www.facebook.com" target="_blank"></a>
               </p>
-              <p><a href="htts://www.twitter.com" target="_blank"></a></p>
+              <p><a href="https://www.twitter.com" target="_blank"></a></p>
               <p><a href="https://www.instagram.com" target="_blank"></a></p>
             </div>
           </div>
