--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>About Unplugged</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -22,8 +22,102 @@
   </head>
 
   <body>
-    <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <header>
+      <div class="content-wrapper">
+        <a href="#"
+          ><img src="assets/unpluggedlogo.png" alt="unplugged logo"
+        /></a>
+        <div class="header-divider"></div>
+        <nav>
+          <ul>
+            <li><a href="../index.html" target="_blank">Homepage</a></li>
+            <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+            <li><a href="index.html">About</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <section class="mission">
+        <div class="content-wrapper">
+          <h2>
+            Our Mission — we want to make you the team you always wanted to be.
+          </h2>
+          <div class="mission-content">
+            <p>
+              We are here to help you unplug from your normal business day and
+              connect as a team, allowing you to devote quality time to
+              polsihing up your team's communication and its levels of
+              effectiveness; identifying and refining strengths as well as
+              strengthening weaknesses; enhancing coworker connections and
+              support; and enhancing creative, innovative, detail-oriented, and
+              collaborative thinking. With a peaceful environment in nature and
+              interactive activities, Unplugged offers your team a unique
+              experience to become stronger, more productive, and fulfilled.
+              Allowing your team time to reset and reconnect will renew your
+              team's day-to-day routine at work, and thus foster greater
+              success. When your team thrives, your company thrives, and
+              Unplugged is here to help your team elevate your daily expereinces
+              from a state of surviving to thriving.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="map">
+        <figure></figure>
+      </section>
+      <section class="contact-section">
+        <div cass="content-wrapper">
+          <h2>Contact us, because all you need is this.</h2>
+          <address class="contact-content">
+            <div>
+              <h4>General Information</h4>
+              <p>
+                333 Main St., Lake Geneva, WI 53147 <br />
+                555-555-5555<br />
+                hello@unplugged.com
+              </p>
+            </div>
+            <div>
+              <h4>Chat with a Facilitator</h4>
+              <p>
+                555-555-5556<br />
+                facilitator@unplugged.com
+              </p>
+            </div>
+          </address>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <div class="contact">
+            <h4>Contact</h4>
+            <address>
+              <p>
+                555-555-5555 <br />
+                hello@unplugged.com
+              </p>
+            </address>
+          </div>
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p>
+                <a href="https://www.facebook.com" target="_blank"></a>
+              </p>
+              <p><a href="https://www.twitter.com" target="_blank"></a></p>
+              <p><a href="https://www.instagram.com" target="_blank"></a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="copyright"><p>Copyright 2022 | Unplugged</p></div>
+    </footer>
+
     <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="../js/plugins.js"></script>
     <script src="../js/main.js"></script>
