--- a/about/index.html
+++ b/about/index.html
@@ -30,9 +30,17 @@
         <div class="header-divider"></div>
         <nav>
           <ul>
-            <li><a href="../index.html" target="_blank">Homepage</a></li>
-            <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
-            <li><a href="index.html">About</a></li>
+            <li>
+              <a href="../index.html" target="_blank" title="Unplugged Homepage"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a href="../faq/index.html" target="_blank" title="Unplugged FAQ"
+                >FAQ</a
+              >
+            </li>
+            <li><a href="index.html" title="About Unplugged">About</a></li>
           </ul>
         </nav>
       </div>
