--- a/faq/index.html
+++ b/faq/index.html
@@ -30,13 +30,66 @@
         <div class="header-divider"></div>
         <nav>
           <ul>
-            <li><a href="../index.html" target="_blank">Homepage</a></li>
-            <li><a href="index.html">FAQ</a></li>
-            <li><a href="../about/index.html" target="_blank">About</a></li>
+            <li>
+              <a href="../index.html" target="_blank" title="Unplugged Homepage"
+                >Home</a
+              >
+            </li>
+            <li><a href="index.html" title="Unplugged FAQ">FAQ</a></li>
+            <li>
+              <a
+                href="../about/index.html"
+                target="_blank"
+                title="About Unplugged"
+                >About</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
     </header>
+
+    <main class="faq">
+      <div class="content-wrapper">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>
+            We're located outside of Lake Geneva, Wisconsin, about 90 minutes
+            from O’Hare International Airport in Chicago and 45 minutes from
+            General Mitchell International Airport in Milwaukee. Hwy I-43 is six
+            miles to the north. Hwy I-94 is 27 miles to the east. You can take a
+            look at our map on our
+            <span><a href="../about/index.html" target="_blank">About</a></span>
+            page and contact us with any questions you may have. We'd be happy
+            to talk to you and answer any of your questions!
+          </p>
+          <h4>What kind of team is right for the Unplugged retreat?</h4>
+          <p>
+            Whether your team is large or small, we are hear to support your
+            team and create an incredible experience of renewal. Unplugged will
+            cultivate a customized retreat experience that meets your team's
+            unique needs and goals.
+          </p>
+          <h4>What size teams can you accommodate?</h4>
+          <p>
+            We can accommodate various sizes of teams, from small to large
+            groups. We'd love to chat with you and learn more about your
+            specific team!
+          </p>
+          <h4>Is there really no wifi available?</h4>
+          <p>
+            Although we believe it is beneficial for your team to unplug from
+            the noisy, busy, and often stressful day-to-day routine in the
+            workplace, and for each team member to reconnect to themselves and
+            their cowrokers, so they can cultivate a stronger team bond and thus
+            renewed energy back at work, we do understand that team members may
+            need to occasionally have access to good wifi, which is why we have
+            a dedicated computer room for times you must use wifi.
+          </p>
+        </div>
+      </div>
+    </main>
 
     <footer>
       <div class="content-wrapper">
