--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       <div class="content-wrapper">
         <a href="#"
-          ><img src="assets/unpluggedlogo.png" alt="unplugged logo"
+          ><img src="" alt="unplugged logo"
         /></a>
         <div class="header-divider"></div>
         <nav>
