--- a/about/index.html
+++ b/about/index.html
@@ -82,8 +82,18 @@
           </div>
         </div>
       </section>
-      <section class="map">
-        <figure></figure>
+      <section class="map-container">
+        <figure>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5873.803852517788!2d-88.42464383128845!3d42.59982427906936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058beaba2a015f%3A0x4b28e3671bb3e0e9!2s333%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147!5e0!3m2!1sen!2sus!4v1653683011149!5m2!1sen!2sus"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </figure>
       </section>
       <section class="contact-section">
         <div cass="content-wrapper">
