--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
 
+    <!-- Font Awesome-->
+    <script src="https://kit.fontawesome.com/c8cec5b779.js" crossorigin="anonymous"></script>
+
     <meta name="theme-color" content="#fafafa" />
     
     <!-- Google Fonts -->
@@ -76,42 +79,54 @@
           </h2>
           <div class="features-items">
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fa-solid fa-campground"></i>
+              </p>
               <p class="features-item-description">
                 Located in a peaceful bungalow outside of Lake Geneva,
                 Wisconsin.
               </p>
             </article>
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fa-solid fa-bed"></i>
+              </p>
               <p class="features-item-description">
                 12 private rooms with ensuite bathrooms, 2 group meeting rooms,
                 and 4 breakout rooms.
               </p>
             </article>
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fa-solid fa-utensils"></i>
+              </p>
               <p class="features-item-description">
                 Private chef team providing on demand meals - just like your
                 team kitchen.
               </p>
             </article>
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fa-solid fa-shoe-prints"></i>
+              </p>
               <p class="features-item-description">
                 5 outdoor obstacle courses, including a private beach <span>&#189</span> mile
                 from bungalow.
               </p>
             </article>
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fa-solid fa-face-smile"></i>
+              </p>
               <p class="features-item-description">
                 Retreat facilitator to manage your day-to-day activities so you
                 all get a chance to reset.
               </p>
             </article>
             <article>
-              <p class="fontawesome-icon"></p>
+              <p class="fontawesome-icon">
+                <i class="fa-solid fa-wifi"></i>
+              </p>
               <p class="features-item-description">
                 Dedicated computer room for times you must use wifi.
               </p>
