--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
             <p>
               We are here to help you unplug from your normal business day and
               connect as a team, allowing you to devote quality time to
-              polsihing up your team's communication and its levels of
+              polishing up your team's communication and its levels of
               effectiveness; identifying and refining strengths as well as
               strengthening weaknesses; enhancing coworker connections and
               support; and enhancing creative, innovative, detail-oriented, and
@@ -82,7 +82,7 @@
               Allowing your team time to reset and reconnect will renew your
               team's day-to-day routine at work, and thus foster greater
               success. When your team thrives, your company thrives, and
-              Unplugged is here to help your team elevate your daily expereinces
+              Unplugged is here to help your team elevate your daily experiences
               from a state of surviving to thriving.
             </p>
           </div>
@@ -141,10 +141,20 @@
             <h4>Social</h4>
             <div class="social-icons">
               <p>
-                <a href="https://www.facebook.com" target="_blank"></a>
+                <a href="https://www.facebook.com" target="_blank"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
               </p>
-              <p><a href="https://www.twitter.com" target="_blank"></a></p>
-              <p><a href="https://www.instagram.com" target="_blank"></a></p>
+              <p>
+                <a href="https://www.twitter.com" target="_blank"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com" target="_blank"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+              </p>
             </div>
           </div>
         </div>
