--- a/faq/index.html
+++ b/faq/index.html
@@ -95,13 +95,13 @@
           </p>
           <h4>Is there really no wifi available?</h4>
           <p>
-            Although we believe it is beneficial for your team to unplug from
-            the noisy, busy, and often stressful day-to-day routine in the
-            workplace, and for each team member to reconnect to themselves and
-            their cowrokers, so they can cultivate a stronger team bond and thus
-            renewed energy back at work, we do understand that team members may
-            need to occasionally have access to good wifi, which is why we have
-            a dedicated computer room for times you must use wifi.
+            Although we believe it's beneficial for your team to unplug from the
+            noisy, busy, and often stressful daily routine in the workplace, and
+            for each team member to reconnect to themselves and their coworkers
+            to cultivate a stronger team bond and thus renewed energy back at
+            work, we do understand team members may need to occasionally have
+            access to good wifi, which is why we have a dedicated computer room
+            for times you must use wifi.
           </p>
         </div>
       </div>
@@ -123,10 +123,20 @@
             <h4>Social</h4>
             <div class="social-icons">
               <p>
-                <a href="https://www.facebook.com" target="_blank"></a>
+                <a href="https://www.facebook.com" target="_blank"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
               </p>
-              <p><a href="https://www.twitter.com" target="_blank"></a></p>
-              <p><a href="https://www.instagram.com" target="_blank"></a></p>
+              <p>
+                <a href="https://www.twitter.com" target="_blank"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com" target="_blank"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+              </p>
             </div>
           </div>
         </div>
