Adjust line-heights, padding, widths, alignment, and edit text content on all pages

--- a/faq/index.html
+++ b/faq/index.html
@@ -74,12 +74,17 @@
             We're located outside of Lake Geneva, Wisconsin, about 90 minutes
             from O’Hare International Airport in Chicago and 45 minutes from
             General Mitchell International Airport in Milwaukee. Hwy I-43 is six
-            miles to the north. Hwy I-94 is 27 miles to the east. You can take a
-            look at our map on our
-            <span><a href="../about/index.html" target="_blank">About</a></span>
-            page and contact us with any questions you may have. We'd be happy
-            to talk to you and answer any of your questions!
+            miles to the north. Hwy I-94 is 27 miles to the east. Checkout our
+            map by clicking here:
+            <span
+              ><a href="../about/index.html" target="_blank"
+                >About page</a
+              ></span
+            >. Feel free to contact us with any questions you may have. We'd be
+            happy to talk to you and answer any of your questions!
           </p>
+        </div>
+        <div class="faq-content">
           <h4>What kind of team is right for the Unplugged retreat?</h4>
           <p>
             Whether your team is large or small, we are hear to support your
@@ -87,12 +92,16 @@
             cultivate a customized retreat experience that meets your team's
             unique needs and goals.
           </p>
+        </div>
+        <div class="faq-content">
           <h4>What size teams can you accommodate?</h4>
           <p>
             We can accommodate various sizes of teams, from small to large
             groups. We'd love to chat with you and learn more about your
             specific team!
           </p>
+        </div>
+        <div class="faq-content">
           <h4>Is there really no wifi available?</h4>
           <p>
             Although we believe it's beneficial for your team to unplug from the
@@ -101,7 +110,7 @@
             to cultivate a stronger team bond and thus renewed energy back at
             work, we do understand team members may need to occasionally have
             access to good wifi, which is why we have a dedicated computer room
-            for times you must use wifi.
+            for those times.
           </p>
         </div>
       </div>
