--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </p>
               <p class="features-item-description">
                 5 outdoor obstacle courses, including a private beach <span>&#189</span> mile
-                from bungalow.
+                from the bungalow.
               </p>
             </article>
             <article>
@@ -142,7 +142,7 @@
             <figure>
               <img src="img/omar-lopez-296944-unsplash.jpg" alt="A group of people out in nature on a sunny day, enjoying their team retreat.">
             </figure>
-            <div><h3>LaCrue Bottling Co. October 2018</h3>
+            <div><h3>LaCrue Bottling Co. October 2021</h3>
             <p>
             "Unplugged was an amazing experience, allowing our team the time
             needed to reset, refocus, and become stronger than ever!"
