--- a/about/index.html
+++ b/about/index.html
@@ -76,14 +76,16 @@
               effectiveness; identifying and refining strengths as well as
               strengthening weaknesses; enhancing coworker connections and
               support; and enhancing creative, innovative, detail-oriented, and
-              collaborative thinking. With a peaceful environment in nature and
-              interactive activities, Unplugged offers your team a unique
-              experience to become stronger, more productive, and fulfilled.
-              Allowing your team time to reset and reconnect will renew your
-              team's day-to-day routine at work, and thus foster greater
-              success. When your team thrives, your company thrives, and
-              Unplugged is here to help your team elevate your daily experiences
-              from a state of surviving to thriving.
+              collaborative thinking.
+            </p>
+            <p>
+              With a peaceful environment in nature and interactive activities,
+              Unplugged offers your team a unique experience to become stronger,
+              more productive, and fulfilled. Allowing your team quality time to
+              reset and reconnect will renew your team's daily routine at work,
+              and thus foster greater success. When your team thrives, your
+              company thrives, and Unplugged is here to help your team elevate
+              your daily experiences from a state of surviving to thriving!
             </p>
           </div>
         </div>
