Edit errors found in text content on all pages

--- a/about/index.html
+++ b/about/index.html
@@ -79,13 +79,14 @@
               collaborative thinking.
             </p>
             <p>
-              With a peaceful environment in nature and interactive activities,
-              Unplugged offers your team a unique experience to become stronger,
-              more productive, and fulfilled. Allowing your team quality time to
-              reset and reconnect will renew your team's daily routine at work,
-              and thus foster greater success. When your team thrives, your
-              company thrives, and Unplugged is here to help your team elevate
-              your daily experiences from a state of surviving to thriving!
+              With a peaceful environment in nature and interactive group
+              activities, Unplugged offers your team a unique experience to
+              become stronger, more productive, and fulfilled. Allowing your
+              team quality time to reset and reconnect will renew your team's
+              daily routine at work, and thus foster greater success. When your
+              team thrives, your company thrives, and Unplugged is here to help
+              your team elevate your daily experiences from a state of surviving
+              to thriving!
             </p>
           </div>
         </div>
