--- a/faq/index.html
+++ b/faq/index.html
@@ -74,7 +74,7 @@
             We're located outside of Lake Geneva, Wisconsin, about 90 minutes
             from O’Hare International Airport in Chicago and 45 minutes from
             General Mitchell International Airport in Milwaukee. Hwy I-43 is six
-            miles to the north. Hwy I-94 is 27 miles to the east. Checkout our
+            miles to the north. Hwy I-94 is 27 miles to the east. Check out our
             map by clicking here:
             <span
               ><a href="../about/index.html" target="_blank"
@@ -87,7 +87,7 @@
         <div class="faq-content">
           <h4>What kind of team is right for the Unplugged retreat?</h4>
           <p>
-            Whether your team is large or small, we are hear to support your
+            Whether your team is large or small, we are here to support your
             team and create an incredible experience of renewal. Unplugged will
             cultivate a customized retreat experience that meets your team's
             unique needs and goals.
@@ -107,10 +107,10 @@
             Although we believe it's beneficial for your team to unplug from the
             noisy, busy, and often stressful daily routine in the workplace, and
             for each team member to reconnect to themselves and their coworkers
-            to cultivate a stronger team bond and thus renewed energy back at
+            to cultivate a stronger team bond, and thus renewed energy back at
             work, we do understand team members may need to occasionally have
             access to good wifi, which is why we have a dedicated computer room
-            for those times.
+            for such times.
           </p>
         </div>
       </div>
