--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <i class="fa-solid fa-shoe-prints"></i>
               </p>
               <p class="features-item-description">
-                5 outdoor obstacle courses, including a private beach <span>&#189</span> mile
+                5 outdoor obstacle courses, including a private beach <span>&#189</span> a mile
                 from the bungalow.
               </p>
             </article>
