--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/c8cec5b779.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" crossorigin="anonymous">
 
     <meta name="theme-color" content="#fafafa" />
     
